feat: rename project to MemBrain

--- a/public/assistant.html
+++ b/public/assistant.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Web Assistant</title>
+    <title>MemBrain</title>
     <script src="js/vendor.js"></script>
     <style>
-      html, body {
+      html,
+      body {
         height: 100%;
         margin: 0;
         padding: 0;
